Switch from Jeweler to Bundler and reorganize.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 *.kpf
 *.komodoproject
 *~
-*.orig
 .DS_Store
 *tmp*
 pkg/
 doc/
+*.orig
+*.patch
+.vimrc_local
+debug.log
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+Gemfile.lock
